--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           style="background: url('images/front.png') no-repeat center center/cover; height: 100vh; position: relative;">
     <div class="overlay"></div>
     <div class="container position-relative">
-      <h1 class="display-4 fw-bold">Welcome to BridgeUTK</h1>
+      <h1 class="display-4 fw-bold">Welcome to BridgeUTK!</h1>
       <p class="lead mb-4">Connecting students at the University of Tennessee, Knoxville.</p>
       <a href="about.html" class="btn btn-primary btn-lg shadow-sm m-2">Learn More</a>
       <a href="events.html" class="btn btn-outline-light btn-lg shadow-sm m-2">Upcoming Events</a>
