--- a/events.html
+++ b/events.html
@@ -6,12 +6,12 @@
 
   <title>Events | BridgeUTK</title>
 
-  <!-- Google Font -->
+  <!-- Google Font Raleway -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap & Icons -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-icons.css" rel="stylesheet">
+  <!-- Bootstrap & Icons (via CDN for reliability) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Custom Styles -->
   <link href="css/club-style.css" rel="stylesheet">
@@ -22,6 +22,12 @@
     .card-img-top {
       object-fit: cover;
       height: 200px;
+    }
+    .overlay {
+      background-color: rgba(0,0,0,0.5); /* dark overlay for readability */
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
     }
   </style>
 </head>
@@ -46,8 +52,10 @@
     </div>
   </nav>
 
-  <!-- Hero Section -->
-  <header class="hero-section d-flex align-items-center justify-content-center text-center text-white" style="height: 50vh; background: #343a40;">
+  <!-- Hero Section with Bowling Image -->
+  <header class="hero-section d-flex align-items-center justify-content-center text-center text-white" 
+          style="height: 50vh; background: url('images/bowling.png') no-repeat center center/cover; margin-top: 56px; position: relative;">
+    <div class="overlay"></div>
     <div class="container position-relative">
       <h1 class="display-4 fw-bold">Upcoming Events</h1>
       <p class="lead mb-4">Stay connected and join us for networking, socials, and workshops.</p>
@@ -71,12 +79,10 @@
   <section class="ribbon-section bg-light py-4">
     <div class="container text-center">
       <div class="d-flex flex-wrap justify-content-center gap-3">
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">Instagram</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">TikTok</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">LinkedIn</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">VolLink</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">GroupMe</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">Summit</a>
+        <a href="https://www.instagram.com/bridge.utk?igsh=MXVhcDkwOGlhdjZiMg==" target="_blank" class="btn btn-primary btn-lg shadow-sm">Instagram</a>
+        <a href="https://www.tiktok.com/@bridge.utk1" target="_blank" class="btn btn-primary btn-lg shadow-sm">TikTok</a>
+        <a href="https://bridgeusa.org" target="_blank" class="btn btn-primary btn-lg shadow-sm">Bridge USA</a>
+        <a href="https://utk.campuslabs.com/engage/organization/bridgeutk" target="_blank" class="btn btn-primary btn-lg shadow-sm">VolLink</a>
       </div>
     </div>
   </section>
@@ -89,9 +95,9 @@
         Contact us: <a href="mailto:BridgeTennessee@gmail.com" class="text-white">BridgeTennessee@gmail.com</a>
       </p>
       <div class="social-links mt-2">
-        <a href="https://instagram.com" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
-        <a href="https://facebook.com" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="https://twitter.com" class="text-white"><i class="bi bi-twitter fs-4"></i></a>
+        <a href="https://www.instagram.com/bridge.utk?igsh=MXVhcDkwOGlhdjZiMg==" target="_blank" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+        <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="https://twitter.com" target="_blank" class="text-white"><i class="bi bi-twitter fs-4"></i></a>
       </div>
       <small class="d-block mt-3">&copy; 2025 BridgeUTK. All rights reserved.</small>
     </div>
@@ -139,7 +145,7 @@
 
           card.innerHTML = `
             <div class="card border-0 shadow h-100">
-              <img src="${event.image || 'images/bowling.png'}" class="card-img-top" alt="${event.title}">
+              <img src="images/newslogo.png" class="card-img-top" alt="Event Image">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title fw-bold">${event.title || "Untitled Event"}</h5>
                 <p class="text-muted mb-2"><i class="bi bi-calendar-event me-1"></i> ${formattedDate}</p>
@@ -157,7 +163,7 @@
       });
   </script>
 
-  <!-- Bootstrap JS -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- Bootstrap Bundle JS (via CDN for dropdown + popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
