--- a/exec.html
+++ b/exec.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exec Board | BridgeUTK</title>
 
-  <!-- Google Font -->
+  <!-- Google Font Raleway -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap & Icons -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-icons.css" rel="stylesheet">
+  <!-- Bootstrap & Icons (via CDN) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Custom Styles -->
   <link href="css/club-style.css" rel="stylesheet">
@@ -146,12 +146,10 @@
   <section class="ribbon-section bg-light py-4">
     <div class="container text-center">
       <div class="d-flex flex-wrap justify-content-center gap-3">
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">Instagram</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">TikTok</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">LinkedIn</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">VolLink</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">GroupMe</a>
-        <a href="#" class="btn btn-primary btn-lg shadow-sm">Summit</a>
+        <a href="https://www.instagram.com/bridge.utk?igsh=MXVhcDkwOGlhdjZiMg==" target="_blank" class="btn btn-primary btn-lg shadow-sm">Instagram</a>
+        <a href="https://www.tiktok.com/@bridge.utk1" target="_blank" class="btn btn-primary btn-lg shadow-sm">TikTok</a>
+        <a href="https://bridgeusa.org" target="_blank" class="btn btn-primary btn-lg shadow-sm">Bridge USA</a>
+        <a href="https://utk.campuslabs.com/engage/organization/bridgeutk" target="_blank" class="btn btn-primary btn-lg shadow-sm">VolLink</a>
       </div>
     </div>
   </section>
@@ -164,15 +162,15 @@
         Contact us: <a href="mailto:BridgeTennessee@gmail.com" class="text-white">BridgeTennessee@gmail.com</a>
       </p>
       <div class="social-links mt-2">
-        <a href="https://instagram.com" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
-        <a href="https://facebook.com" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
-        <a href="https://twitter.com" class="text-white"><i class="bi bi-twitter fs-4"></i></a>
+        <a href="https://www.instagram.com/bridge.utk?igsh=MXVhcDkwOGlhdjZiMg==" target="_blank" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+        <a href="https://facebook.com" target="_blank" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
+        <a href="https://twitter.com" target="_blank" class="text-white"><i class="bi bi-twitter fs-4"></i></a>
       </div>
       <small class="d-block mt-3">&copy; 2025 BridgeUTK. All rights reserved.</small>
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- Bootstrap Bundle JS (via CDN) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
