--- a/newsletter.html
+++ b/newsletter.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Newsletters | BridgeUTK</title>
 
-  <!-- Google Font -->
+  <!-- Google Font Raleway -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
-  <!-- Bootstrap & Icons -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/bootstrap-icons.css" rel="stylesheet">
+  <!-- Bootstrap & Icons (via CDN for reliability) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Custom Styles -->
   <link href="css/club-style.css" rel="stylesheet">
@@ -90,7 +90,7 @@
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="js/bootstrap.min.js"></script>
+  <!-- Bootstrap Bundle JS (via CDN for dropdown support) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
