--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div class="container">
       <h2 class="fw-bold mb-3">Why Join?</h2>
       <p class="lead">
-        We’re a student-run club dedicated to networking, growth, and good vibes.
-        From workshops to socials, our goal is to create opportunities for UTK students
-        to connect and thrive.
+        We're a student-run chapter of BridgeUSA with connections to 93 other schools across the nation. 
+        We offer professional development for those interested in politics, government, public policy, 
+        and journalism, as well as social events.
       </p>
     </div>
   </section>
