--- a/events.html
+++ b/events.html
@@ -104,64 +104,81 @@
   </footer>
 
   <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
 
-  <script>
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyB4AqUHT6oseUe-Jcseco3o9iWJcFOEWV4",
-      authDomain: "nick-club-w.firebaseapp.com",
-      projectId: "nick-club-w",
-      storageBucket: "nick-club-w.firebasestorage.app",
-      messagingSenderId: "734053046525",
-      appId: "1:734053046525:web:b0baa61813874930148694"
-    };
+<script>
+  // Firebase config (unchanged)
+  const firebaseConfig = {
+    apiKey: "AIzaSyB4AqUHT6oseUe-Jcseco3o9iWJcFOEWV4",
+    authDomain: "nick-club-w.firebaseapp.com",
+    projectId: "nick-club-w",
+    storageBucket: "nick-club-w.firebasestorage.app",
+    messagingSenderId: "734053046525",
+    appId: "1:734053046525:web:b0baa61813874930148694"
+  };
 
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
-    const eventsContainer = document.getElementById("events-container");
+  // Init
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
+  const eventsContainer = document.getElementById("events-container");
 
-    // Fetch and display events
-    db.collection("events").orderBy("date", "asc").get()
-      .then((querySnapshot) => {
-        if (querySnapshot.empty) {
-          eventsContainer.innerHTML = `<p class="text-center text-warning">No events available.</p>`;
-          return;
-        }
+  // Helper: get millis for sorting from either Timestamp 'date' or string 'time'
+  function getEventMillis(ev) {
+    if (ev.date && typeof ev.date.toDate === "function") {
+      return ev.date.toDate().getTime();
+    }
+    if (ev.time) {
+      const ms = Date.parse(ev.time);
+      if (!isNaN(ms)) return ms;
+    }
+    return Number.MAX_SAFE_INTEGER; // put undated items last
+  }
 
-        querySnapshot.forEach((doc) => {
-          const event = doc.data();
+  // Load ALL events (no orderBy so docs without 'date' like 'chip' aren’t skipped),
+  // sort client-side by date/time ascending, then render.
+  db.collection("events").get()
+    .then((querySnapshot) => {
+      if (querySnapshot.empty) {
+        eventsContainer.innerHTML = `<p class="text-center text-warning">No events available.</p>`;
+        return;
+      }
 
-          const formattedDate = event.date && event.date.toDate
-            ? event.date.toDate().toLocaleDateString('en-US', {
-                weekday: 'short', year: 'numeric', month: 'short', day: 'numeric'
-              })
-            : "Date Coming Soon";
+      const events = [];
+      querySnapshot.forEach((doc) => events.push(doc.data()));
 
-          const card = document.createElement("div");
-          card.className = "col-md-6 col-lg-4";
+      // sort by date/time
+      events.sort((a, b) => getEventMillis(a) - getEventMillis(b));
 
-          card.innerHTML = `
-            <div class="card border-0 shadow h-100">
-              <img src="images/newslogo.png" class="card-img-top" alt="Event Image">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title fw-bold">${event.title || "Untitled Event"}</h5>
-                <p class="text-muted mb-2"><i class="bi bi-calendar-event me-1"></i> ${formattedDate}</p>
-                <p class="flex-grow-1">${event.description || "More details coming soon."}</p>
-                ${event.rsvpLink ? `<a href="${event.rsvpLink}" target="_blank" class="btn btn-outline-primary mt-auto">RSVP</a>` : ""}
-              </div>
+      // render
+      events.forEach((event) => {
+        const dateStr =
+          (event.date && event.date.toDate)
+            ? event.date.toDate().toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' })
+            : (event.time || "Date Coming Soon");
+
+        const card = document.createElement("div");
+        card.className = "col-md-6 col-lg-4";
+        card.innerHTML = `
+          <div class="card border-0 shadow h-100">
+            <img src="${event.image || 'images/newslogo.png'}" class="card-img-top" alt="Event Image">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold">${event.title || "Untitled Event"}</h5>
+              <p class="text-muted mb-2"><i class="bi bi-calendar-event me-1"></i> ${dateStr}</p>
+              <p class="flex-grow-1">${event.description || "More details coming soon."}</p>
+              ${event.rsvpLink ? `<a href="${event.rsvpLink}" target="_blank" class="btn btn-outline-primary mt-auto">RSVP</a>` : ""}
             </div>
-          `;
-          eventsContainer.appendChild(card);
-        });
-      })
-      .catch((error) => {
-        console.error("Error fetching events:", error);
-        eventsContainer.innerHTML = `<p class="text-center text-danger">Failed to load events.</p>`;
+          </div>
+        `;
+        eventsContainer.appendChild(card);
       });
-  </script>
+    })
+    .catch((error) => {
+      console.error("Error fetching events:", error);
+      eventsContainer.innerHTML = `<p class="text-center text-danger">Failed to load events.</p>`;
+    });
+</script>
+
 
   <!-- Bootstrap Bundle JS (via CDN for dropdown + popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
