update website eve.

--- a/exec.html
+++ b/exec.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exec Board | BridgeUTK</title>
 
-  <!-- Google Font Raleway -->
+  <!-- Google Font Raleway  -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap & Icons (via CDN) -->
@@ -142,7 +142,7 @@
     </div>
   </section>
 
-  <!-- Ribbon with Social/Links Buttons -->
+  <!-- Ribbon with Social/Links  Butons -->
   <section class="ribbon-section bg-light py-4">
     <div class="container text-center">
       <div class="d-flex flex-wrap justify-content-center gap-3">
