--- a/events.html
+++ b/events.html
@@ -161,7 +161,7 @@
         card.className = "col-md-6 col-lg-4";
         card.innerHTML = `
           <div class="card border-0 shadow h-100">
-            <img src="${event.image || 'images/newslogo.png'}" class="card-img-top" alt="Event Image">
+            <img src="${event.image || 'images/discussion.png'}" class="card-img-top" alt="Event Image">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title fw-bold">${event.title || "Untitled Event"}</h5>
               <p class="text-muted mb-2"><i class="bi bi-calendar-event me-1"></i> ${dateStr}</p>
@@ -180,7 +180,7 @@
 </script> 
 
 
-  <!-- Boot  strap Bundle JS (via CDN for dropdown + popper)  -->
+  <!-- Boot   strap Bundle JS (via CDN for dropdown + popper)  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
