--- a/events.html
+++ b/events.html
@@ -20,8 +20,10 @@
       font-family: 'Raleway', sans-serif;
     }
     .card-img-top {
-      object-fit: cover;
-      height: 200px;
+      object-fit: contain;
+      height: 180px;
+      background-color: #f8f9fa; /* adds neutral padding background */
+      padding: 10px;
     }
     .overlay {
       background-color: rgba(0,0,0,0.5); /* dark overlay for readability */
