--- a/exec.html
+++ b/exec.html
@@ -5,23 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Exec Board | BridgeUTK</title>
 
-  <!-- Google Font Raleway  -->
+  <!-- Google Font Raleway -->
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
   <!-- Bootstrap & Icons (via CDN) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
-  <!-- Custom   Styles -->
+  <!-- Custom Styles -->
   <link href="css/club-style.css" rel="stylesheet">
   <style>
     body {
       font-family: 'Raleway', sans-serif;
     }
     .card-img-top {
-      object-fit: contain;   /* ensures full face/head shows */
-      height: 300px;         /* taller for portrait style */
-      background: #f8f9fa;   /* subtle background fill */
+      object-fit: contain;
+      height: 300px;
+      background: #f8f9fa;
     }
   </style>
 </head>
@@ -47,7 +47,7 @@
   </nav>
 
   <!-- Hero Banner -->
-  <header class="hero-section d-flex align-items-center justify-content-center text-center text-white" 
+  <header class="hero-section d-flex align-items-center justify-content-center text-center text-white"
           style="height: 50vh; background: url('images/execfront.png') no-repeat center center/cover; margin-top:56px;">
     <div class="container">
       <h1 class="display-4 fw-bold">Executive Board</h1>
@@ -55,9 +55,12 @@
     </div>
   </header>
 
-  <!-- Exec Members Grid -->
+  <!-- ==================== -->
+  <!-- Current Executive Board -->
+  <!-- ==================== -->
   <section class="py-5">
     <div class="container">
+      <h2 class="text-center fw-bold mb-5">Current Executive Board</h2>
       <div class="row g-4">
 
         <!-- Nick Huber -->
@@ -142,7 +145,67 @@
     </div>
   </section>
 
-  <!-- Ribbon with Social/Links  Butons -->
+  <!-- ==================== -->
+  <!-- Supporting Staff -->
+  <!-- ==================== -->
+  <section class="py-5 bg-light">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5">Supporting Staff</h2>
+      <div class="row g-4 justify-content-center">
+
+        <!-- Andrew Kingslover -->
+        <div class="col-sm-6 col-lg-4">
+          <div class="card shadow-sm h-100 text-center">
+            <img src="images/andrewk.png" class="card-img-top" alt="Headshot of Andrew Kingslover">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold mb-1">Andrew Kingslover</h5>
+              <p class="text-primary mb-2">Newsletter Writer</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Joseph DiSalvo -->
+        <div class="col-sm-6 col-lg-4">
+          <div class="card shadow-sm h-100 text-center">
+            <img src="images/joeyd.png" class="card-img-top" alt="Headshot of Joseph DiSalvo">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold mb-1">Joseph DiSalvo</h5>
+              <p class="text-primary mb-2">VP of Technology</p>
+              <p class="mb-1"><strong>Computer Science</strong> — Staten Island, NY</p>
+               <p class="text-muted mb-0">Class of ’26</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- ==================== -->
+  <!-- Past Executive Members -->
+  <!-- ==================== -->
+  <section class="py-5">
+    <div class="container">
+      <h2 class="text-center fw-bold mb-5">Past Executive Members</h2>
+      <div class="row g-4 justify-content-center">
+
+        <!-- John Kingston -->
+        <div class="col-sm-6 col-lg-4">
+          <div class="card shadow-sm h-100 text-center">
+            <img src="images/johnk.png" class="card-img-top" alt="Headshot of John Kingston">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title fw-bold mb-1">John Kingston</h5>
+              <p class="text-primary mb-2">Cofounder &amp; President 2023–2024</p>
+              <p class="mb-1"><strong>Accounting</strong> — Memphis, TN</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+  <!-- Ribbon with Social/Links Buttons -->
   <section class="ribbon-section bg-light py-4">
     <div class="container text-center">
       <div class="d-flex flex-wrap justify-content-center gap-3">
@@ -170,7 +233,7 @@
     </div>
   </footer>
 
-  <!-- Bootstrap Bundle JS (via CDN) -->
+  <!-- Bootstrap Bundle JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
