--- a/events.html
+++ b/events.html
@@ -77,6 +77,18 @@
     </div>
   </section>
 
+  <!-- Queue Button Section -->
+<div class="text-center mt-5">
+  <a href="queue.html" class="btn btn-primary btn-lg shadow-sm px-5 py-3">
+    <i class="bi bi-people-fill me-2"></i> Join Discussion Queue
+  </a>
+  <p class="mt-2 text-muted">Click here during meetings to access the live speaking queue.
+
+    
+  </p>
+</div>
+
+
   <!-- Ribbon with Social/Links Buttons -->
   <section class="ribbon-section bg-light py-4">
     <div class="container text-center">
