--- a/exec.html
+++ b/exec.html
@@ -146,40 +146,86 @@
   </section>
 
   <!-- ==================== -->
-  <!-- Supporting Staff -->
-  <!-- ==================== -->
-  <section class="py-5 bg-light">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-5">Supporting Staff</h2>
-      <div class="row g-4 justify-content-center">
+<!-- Supporting Staff -->
+<!-- ==================== -->
+<section class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-5">Supporting Staff</h2>
+    <div class="row g-4 justify-content-center">
 
-        <!-- Andrew Kingslover -->
-        <div class="col-sm-6 col-lg-4">
-          <div class="card shadow-sm h-100 text-center">
-            <img src="images/andrewk.png" class="card-img-top" alt="Headshot of Andrew Kingslover">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title fw-bold mb-1">Andrew Kingslover</h5>
-              <p class="text-primary mb-2">Newsletter Writer</p>
-            </div>
+      <!-- Andrew Kingslover -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/andrewk.png" class="card-img-top" alt="Headshot of Andrew Kingslover">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Andrew Kingslover</h5>
+            <p class="text-primary mb-2">Newsletter Writer</p>
           </div>
         </div>
-
-        <!-- Joseph DiSalvo -->
-        <div class="col-sm-6 col-lg-4">
-          <div class="card shadow-sm h-100 text-center">
-            <img src="images/joeyd.png" class="card-img-top" alt="Headshot of Joseph DiSalvo">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title fw-bold mb-1">Joseph DiSalvo</h5>
-              <p class="text-primary mb-2">VP of Technology</p>
-              <p class="mb-1"><strong>Computer Science</strong> — Staten Island, NY</p>
-               <p class="text-muted mb-0">Class of ’26</p>
-            </div>
-          </div>
-        </div>
-
       </div>
+
+      <!-- Joseph DiSalvo -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/joeyd.png" class="card-img-top" alt="Headshot of Joseph DiSalvo">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Joseph DiSalvo</h5>
+            <p class="text-primary mb-2">VP of Technology</p>
+            <p class="mb-1"><strong>Computer Science</strong> — Staten Island, NY</p>
+            <p class="text-muted mb-0">Class of ’26</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Celeste Zucker -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/zucker.png" class="card-img-top" alt="Headshot of Celeste Zucker">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Celeste Zucker</h5>
+            <p class="text-primary mb-2">Chief Editor</p>
+            <p class="mb-1"><strong>Economics & Supply Chain Management</strong> — San Francisco, CA</p>
+            <p class="text-muted mb-0">Class of ’29</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Connor Corby -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/Corby.png" class="card-img-top" alt="Headshot of Connor Corby">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Connor Corby</h5>
+            <p class="text-primary mb-2">Newsletter Writer</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Elizabeth Knapp -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/knapp.png" class="card-img-top" alt="Headshot of Elizabeth Knapp">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Elizabeth Knapp</h5>
+            <p class="text-primary mb-2">Assistant VPFM</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Dr. Jordan Carr Peterson -->
+      <div class="col-sm-6 col-lg-4">
+        <div class="card shadow-sm h-100 text-center">
+          <img src="images/carr.png" class="card-img-top" alt="Headshot of Dr. Jordan Carr Peterson">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title fw-bold mb-1">Dr. Jordan Carr Peterson</h5>
+            <p class="text-primary mb-2">Faculty Advisor</p>
+          </div>
+        </div>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- ==================== -->
   <!-- Past Executive Members -->
