--- a/newsletter.html
+++ b/newsletter.html
@@ -60,15 +60,36 @@
 
       <div id="newsletter-list" class="list-group">
 
-        <!-- Static Newsletter Item -->
+        <!-- Newsletter Issue #3 -->
+<a href="images/news3.pdf" target="_blank" 
+class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+  <div>
+    <h5 class="mb-1">Newsletter Issue #3</h5>
+    <small>October 20, 2025</small>
+  </div>
+  <i class="bi bi-file-earmark-pdf fs-3 text-danger"></i>
+</a>
+        
+<!-- Newsletter Issue #2 -->
+<a href="images/news2.pdf" target="_blank" 
+class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+  <div>
+    <h5 class="mb-1">Newsletter Issue #2</h5>
+    <small>October 10, 2025</small>
+  </div>
+  <i class="bi bi-file-earmark-pdf fs-3 text-danger"></i>
+</a>
+
+<!-- Static Newsletter Item -->
         <a href="images/news1.pdf" target="_blank" 
            class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
           <div>
             <h5 class="mb-1">Newsletter Issue #1</h5>
-            <small>January 2025</small>
+            <small>September 19, 2025</small>
           </div>
           <i class="bi bi-file-earmark-pdf fs-3 text-danger"></i>
         </a>
+
 
       </div>
     </div>
