--- a/exec.html
+++ b/exec.html
@@ -58,10 +58,10 @@
   <!-- ==================== -->
   <!-- Current Executive Board -->
   <!-- ==================== -->
-  <section class="py-5">
-    <div class="container">
-      <h2 class="text-center fw-bold mb-5">Current Executive Board</h2>
-      <div class="row g-4">
+<section class="py-5 bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-5">Current Executive Board</h2>
+    <div class="row g-4 justify-content-center">
 
         <!-- Nick Huber -->
         <div class="col-sm-6 col-lg-4">
@@ -101,20 +101,6 @@
             </div>
           </div>
         </div>
-
-        <!-- Luke Hatler -->
-        <div class="col-sm-6 col-lg-4">
-          <div class="card shadow-sm h-100 text-center">
-            <img src="images/Luke Headshot.png" class="card-img-top" alt="Headshot of Luke Hatler">
-            <div class="card-body d-flex flex-column">
-              <h5 class="card-title fw-bold mb-1">Luke Hatler</h5>
-              <p class="text-primary mb-2">VP of Newsletter</p>
-              <p class="mb-1"><strong>Geography Urban Studies</strong> — Memphis, TN</p>
-              <p class="text-muted mb-0">Class of ’28</p>
-            </div>
-          </div>
-        </div>
-
         <!-- Athrv Grewal -->
         <div class="col-sm-6 col-lg-4">
           <div class="card shadow-sm h-100 text-center">
@@ -201,16 +187,6 @@
         </div>
       </div>
 
-      <!-- Elizabeth Knapp -->
-      <div class="col-sm-6 col-lg-4">
-        <div class="card shadow-sm h-100 text-center">
-          <img src="images/knapp.png" class="card-img-top" alt="Headshot of Elizabeth Knapp">
-          <div class="card-body d-flex flex-column">
-            <h5 class="card-title fw-bold mb-1">Elizabeth Knapp</h5>
-            <p class="text-primary mb-2">Assistant VPFM</p>
-          </div>
-        </div>
-      </div>
 
       <!-- Dr. Jordan Carr Peterson -->
       <div class="col-sm-6 col-lg-4">
